# myROS

./: README.md
camera_ws/.catkin_tools/profiles/default/: devel_collisions.txt
camera_ws/devel/: .catkin  setup.sh
camera_ws/devel/lib/pkgconfig/: face_recognizer.pc
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: cv_basics.pc  cv_bridge.pc  detect_pump.pc  face_reg.pc  getting_started.pc  image_transport.pc  learning_tf.pc  m2wr_description.pc  qrcode.pc  rospy.pc  sensor_msgs.pc  std_msgs.pc  ur10_e_moveit_config.pc  ur10_moveit_config.pc  ur3_e_moveit_config.pc  ur3_moveit_config.pc  ur5_e_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc  usb_cam.pc
catkin_ws/src/cv_basics/: CMakeLists.txt
catkin_ws/src/cv_basics/scripts/: cam.py  test.py  webcam_pub.py  webcam_sub.py
catkin_ws/src/cv_bridge/: CMakeLists.txt
catkin_ws/src/detect_pump/: package.xml
catkin_ws/src/face_reg/: CMakeLists.txt
catkin_ws/src/getting_started/: CMakeLists.txt  package.xml
catkin_ws/src/getting_started/Project/move_group_interface/: CMakeLists.txt
catkin_ws/src/getting_started/Project/move_group_interface/launch/: start.launch
catkin_ws/src/getting_started/Project/move_group_interface/script/: move_group_interface.py
catkin_ws/src/learning_tf/: package.xml
catkin_ws/src/m2wr_description/: package.xml
catkin_ws/src/m2wr_description/launch/: rviz.launch
(+41 files in other folders)
